crates/simpl-syntax/src/snapshots/simpl_syntax__test__literal-2.snap
---
source: crates/simpl-syntax/src/test.rs
expression: parse(src).unwrap()
---
Lit {
    val: Float(
        123.456,
    ),
}
