crates/simpl-syntax/src/snapshots/simpl_syntax__test__literal-4.snap
---
source: crates/simpl-syntax/src/test.rs
expression: ast
---
Lit {
    val: Bool(
        false,
    ),
}
