crates/simpl-syntax/src/snapshots/simpl_syntax__test__literal.snap
---
source: crates/simpl-syntax/src/test.rs
expression: parser.parse(src).unwrap()
---
Lit(
    Int(
        123,
    ),
)
