crates/simpl-syntax/src/snapshots/simpl_syntax__test__var.snap
---
source: crates/simpl-syntax/src/test.rs
expression: parse(src).unwrap()
---
Var {
    name: "abc",
}
